extends Node2D

# --- ì”¬ ê²½ë¡œ ---
const IngredientCardScene = preload("res://scenes/ingredient_card.tscn")

# --- ì¬ë£Œ(ë±) ê´€ë¦¬ ---
var deck = [
	"ë¶ˆê½ƒë²„ì„¯", "ì–¼ìŒë‚˜ë¬´ ì—´ë§¤", "ë…ì´ˆ",
	"ìš©ì•”ê³ ê¸°", "ë°”ë‹¤ì†Œê¸ˆ", "í—ˆë¸Œ",
	"í™©ê¸ˆìƒì„ ", "ë§ˆë²•ê°€ë£¨"
]

# --- ë ˆì‹œí”¼(ìš”ë¦¬ë²•) ---
var recipes = {
	"ë§¤ì½¤í•œ ìŠ¤íŠœ": ["ë¶ˆê½ƒë²„ì„¯", "ì–¼ìŒë‚˜ë¬´ ì—´ë§¤", "ë…ì´ˆ"],
	"ìš©ì•”êµ¬ì´": ["ìš©ì•”ê³ ê¸°", "ë°”ë‹¤ì†Œê¸ˆ", "í—ˆë¸Œ"],
	"í™©ê¸ˆìƒì„ ì°œ": ["í™©ê¸ˆìƒì„ ", "ë°”ë‹¤ì†Œê¸ˆ", "í—ˆë¸Œ"],
	"ë¹„ë°€ì˜ ìŠ¤í”„": ["ë§ˆë²•ê°€ë£¨", "ë¶ˆê½ƒë²„ì„¯", "ì–¼ìŒë‚˜ë¬´ ì—´ë§¤"]
}

# --- ì¬ë£Œ ì´ë¯¸ì§€ ë§µ ---
var card_textures = {
	"ë¶ˆê½ƒë²„ì„¯": preload("res://Images/test_image/resource/resource_fire_mushroom.png"),
	"ì–¼ìŒë‚˜ë¬´ ì—´ë§¤": preload("res://Images/test_image/resource/resource_ice_fruit.png"),
	"ë…ì´ˆ": preload("res://Images/test_image/resource/resource_poison_herb.png"),
	"ìš©ì•”ê³ ê¸°": preload("res://Images/test_image/resource/resource_lava_meat.png"),
	"ë°”ë‹¤ì†Œê¸ˆ": preload("res://Images/test_image/resource/resource_sea_salt.png"),
	"í—ˆë¸Œ": preload("res://Images/test_image/resource/resource_fresh_herb.png"),
	"í™©ê¸ˆìƒì„ ": preload("res://Images/test_image/resource/resource_golden_fish.png"),
	"ë§ˆë²•ê°€ë£¨": preload("res://Images/test_image/resource/resource_magic_powder.png")
}

# --- ë§Œì¡±ë„ ì‹œìŠ¤í…œ ë°¸ëŸ°ìŠ¤ ---
const SATISFACTION_START: int = 50        # ê¸°ë³¸ ë§Œì¡±ë„
const SATISFACTION_TIME_TIER_1: float = 5.0  # 5ì´ˆ ì´ë‚´
const SATISFACTION_SCORE_TIER_1: int = 10   # +10ì 
const SATISFACTION_TIME_TIER_2: float = 10.0 # 10ì´ˆ ì´ë‚´
const SATISFACTION_SCORE_TIER_2: int = 5    # +5ì 
const SATISFACTION_TIME_TIER_3: float = 15.0 # 15ì´ˆ ì´ë‚´
const SATISFACTION_SCORE_TIER_3: int = 1    # +1ì 
const SATISFACTION_SCORE_LATE: int = -3     # 15ì´ˆ ì´ˆê³¼ ì‹œ
const SATISFACTION_SCORE_FAIL: int = -5     # ìš”ë¦¬ ì‹¤íŒ¨ ì‹œ

# --- ìƒíƒœ ë³€ìˆ˜ ---
var order_list: Array = []
var current_order: String = ""
var cards_in_slots = {}
var hand_cards: Array = []
var currently_dragged_card = null
var total_satisfaction: int = SATISFACTION_START

# --- ë¦¬ë¡¤ ê´€ë ¨ ---
const MAX_REROLL: int = 2
var reroll_count: int = 0
var selected_for_reroll: Array = []

# --- ê²Œì„ íƒ€ì´ë¨¸ ê´€ë ¨ ---
var game_time_limit: float = 180.0  # ğŸ”¹3ë¶„(180ì´ˆ)ìœ¼ë¡œ ë³€ê²½
var remaining_time: float = game_time_limit
var game_over: bool = false
	
# --- ë…¸ë“œ ì°¸ì¡° ---
@onready var player_hand = $PlayerHand
@onready var cooking_area = $CookingArea
@onready var monster_label = $Monster/OrderLabel
@onready var result_label = $ResultLabel
@onready var draw_button = $DrawButton
@onready var combine_button = $CombineButton
@onready var monster_node = $Monster
@onready var reroll_button = $RerollButton
@onready var reroll_label = $RerollLabel
@onready var game_timer_label = $GameTimerLabel
@onready var order_timer = $OrderTimer
@onready var satisfaction_label = $SatisfactionLabel
@onready var game_timer_bar = $GameTimerBar

func _ready():
	# ìŠ¬ë¡¯ ë“±ë¡
	for i in range(1, 4):
		var slot_name = "IngredientSlot%d" % i
		cards_in_slots[slot_name] = null

	get_new_order()
	deck.shuffle()

	# ë²„íŠ¼ ì‹ í˜¸ ì—°ê²°
	if draw_button:
		draw_button.connect("pressed", Callable(self, "_on_draw_button_pressed"))
	if combine_button:
		combine_button.connect("pressed", Callable(self, "_on_combine_button_pressed"))
	if reroll_button:
		reroll_button.connect("pressed", Callable(self, "_on_reroll_button_pressed"))

	_update_reroll_label()
	_update_game_timer_label()
	_update_satisfaction_label()

# --- ì£¼ë¬¸ ë½‘ê¸° ---
func get_new_order():
	if game_over: return
	
	var monster_id = randi() % 3
	monster_node.set_monster(monster_id)

	current_order = monster_node.m_order
	monster_label.text = "ì£¼ë¬¸: " + current_order
	
	# ì£¼ë¬¸ íƒ€ì´ë¨¸ ì‹œì‘
	order_timer.wait_time = SATISFACTION_TIME_TIER_3
	order_timer.start()

# --- ì¹´ë“œ í”½ì—… ---
func _on_card_picked_up(card):
	if game_over: return
	
	if currently_dragged_card:
		return
	currently_dragged_card = card
	if card.is_in_pot:
		card.is_in_pot = false
		for slot_name in cards_in_slots:
			if cards_in_slots[slot_name] == card:
				cards_in_slots[slot_name] = null
				break

	var card_global_pos = card.global_position
	if card.get_parent() != self:
		card.get_parent().remove_child(card)
		add_child(card)
		card.global_position = card_global_pos
	card.z_index = 10

# --- ë¦¬ë¡¤ ì„ íƒ í† ê¸€ ---
func _on_card_reroll_toggled(card, selected):
	if card.is_in_pot:
		if selected:
			if selected_for_reroll.has(card):
				selected_for_reroll.erase(card)
			result_label.text = "í¬íŠ¸ì— ìˆëŠ” ì¹´ë“œëŠ” ë¦¬ë¡¤í•  ìˆ˜ ì—†ìŠµë‹ˆë‹¤."
			await get_tree().create_timer(1.2).timeout
			result_label.text = ""
		return

	if selected:
		if not selected_for_reroll.has(card):
			selected_for_reroll.append(card)
	else:
		if selected_for_reroll.has(card):
			selected_for_reroll.erase(card)

# --- ë“œë˜ê·¸/ë“œë¡­ ---
func _input(event: InputEvent):
	if currently_dragged_card:
		if event is InputEventMouseButton and event.button_index == MOUSE_BUTTON_LEFT and not event.is_pressed():
			var dropped_card = currently_dragged_card
			currently_dragged_card = null
			var mouse_pos = get_global_mouse_position()
			var dropped_on_slot = false
			for slot_name in cards_in_slots:
				var slot_node = cooking_area.get_node(slot_name)
				var background = slot_node.get_node("Background")
				var background_rect = background.get_global_rect()
				if background_rect.has_point(mouse_pos):
					if not cards_in_slots[slot_name]:
						dropped_on_slot = true
						var slot_center = background.global_position + (background.size / 2)
						dropped_card.size = background.size
						dropped_card.global_position = slot_center - (dropped_card.size / 2)
						dropped_card.z_index = 1
						dropped_card.is_in_pot = true
						cards_in_slots[slot_name] = dropped_card
						hand_cards.erase(dropped_card)
						if selected_for_reroll.has(dropped_card):
							selected_for_reroll.erase(dropped_card)
						break
			if not dropped_on_slot:
				dropped_card.z_index = 0
				if not hand_cards.has(dropped_card):
					hand_cards.append(dropped_card)
				if dropped_card.get_parent() == self:
					remove_child(dropped_card)
				player_hand.add_child(dropped_card)

# --- ë©”ì¸ ë£¨í”„ (Process) ---
func _process(delta):
	# ì¹´ë“œ ë“œë˜ê·¸ ì²˜ë¦¬
	if currently_dragged_card:
		currently_dragged_card.global_position = get_global_mouse_position() - (currently_dragged_card.size / 2)

	# ì „ì²´ ê²Œì„ íƒ€ì´ë¨¸ ê°±ì‹ 
	if not game_over:
		remaining_time -= delta
		
		if remaining_time <= 0:
			remaining_time = 0
			_on_game_over() # ì‹œê°„ìœ¼ë¡œ ì¸í•œ ê²Œì„ ì˜¤ë²„
		_update_game_timer_label()

# --- ì¹´ë“œ ë½‘ê¸° ---
func _on_draw_button_pressed():
	if game_over: return

	if deck.is_empty():
		deck = Array(card_textures.keys())
		deck.shuffle()

	if not deck.is_empty() and hand_cards.size() < 5:
		var card_name = deck.pop_front()
		var new_card = IngredientCardScene.instantiate()
		player_hand.add_child(new_card)
		new_card.setup(card_name, card_textures[card_name])
		hand_cards.append(new_card)
		if new_card.has_signal("card_picked_up"):
			new_card.connect("card_picked_up", Callable(self, "_on_card_picked_up"))
		if new_card.has_signal("reroll_toggled"):
			new_card.connect("reroll_toggled", Callable(self, "_on_card_reroll_toggled"))

# --- í•©ì„± ë²„íŠ¼ (ë©”ì¸ ë¡œì§) ---
func _on_combine_button_pressed():
	if game_over: return

	# ì£¼ë¬¸ íƒ€ì´ë¨¸ ì •ì§€ ë° ì‹œê°„ ê³„ì‚°
	order_timer.stop()
	var elapsed_time = order_timer.wait_time - order_timer.time_left

	# ë ˆì‹œí”¼ ê²€ì‚¬ ì‹¤í–‰
	var success = check_recipe_specialist() 

	# ë§Œì¡±ë„ ì‹œìŠ¤í…œ ì²˜ë¦¬
	process_satisfaction_logic(success, elapsed_time)
	
	if game_over: return # ë§Œì¡±ë„ê°€ 0ì´ ë˜ì–´ ê²Œì„ì˜¤ë²„ ë˜ë©´, ì•„ë˜ ë¡œì§ ì‹¤í–‰ ì•ˆ í•¨

	# ìŠ¬ë¡¯ ì •ë¦¬
	for slot_name in cards_in_slots:
		var card_node = cards_in_slots[slot_name]
		if card_node and is_instance_valid(card_node):
			card_node.queue_free()
		cards_in_slots[slot_name] = null

	# ë‹¤ìŒ ì£¼ë¬¸
	await get_tree().create_timer(2.0).timeout
	result_label.text = ""
	get_new_order()

# --- ì¡°í•© ê²€ì‚¬  ---
# ë ˆì‹œí”¼ ì¼ì¹˜ ì—¬ë¶€ë§Œ ê²€ì‚¬í•˜ì—¬ true/false ë°˜í™˜
func check_recipe_specialist() -> bool:
	var placed_ingredients = []
	for i in range(1, 4):
		var slot_name = "IngredientSlot%d" % i
		var card = cards_in_slots.get(slot_name, null)
		
		if card and "card_name" in card:
			if card.card_name:
				placed_ingredients.append(card.card_name)
			else:
				placed_ingredients.append("ë¹ˆì¹¸")
		elif card:
			placed_ingredients.append("ë¹ˆì¹¸")
		else:
			placed_ingredients.append("ë¹ˆì¹¸")

	if not recipes.has(current_order):
		result_label.text = "ì´ ì£¼ë¬¸ì˜ ë ˆì‹œí”¼ê°€ ì—†ìŠµë‹ˆë‹¤."
		return false

	var required_ingredients = recipes[current_order].duplicate()
	placed_ingredients.sort()
	required_ingredients.sort()

	if placed_ingredients == required_ingredients:
		return true
	else:
		return false

# --- ë¦¬ë¡¤ ë²„íŠ¼ ---
func _on_reroll_button_pressed():
	if game_over: return

	if reroll_count >= MAX_REROLL:
		result_label.text = "ë¦¬ë¡¤ ê¸°íšŒê°€ ì—†ìŠµë‹ˆë‹¤!"
		return

	if hand_cards.is_empty():
		result_label.text = "ë²„ë¦´ ì¹´ë“œê°€ ì—†ìŠµë‹ˆë‹¤!"
		return

	var to_reroll: Array = []
	if selected_for_reroll.size() > 0:
		to_reroll = selected_for_reroll.duplicate()
	else:
		to_reroll = hand_cards.duplicate()

	for card in to_reroll:
		if is_instance_valid(card):
			deck.append(card.card_name)
			if card.get_parent():
				card.get_parent().remove_child(card)
			card.queue_free()
			hand_cards.erase(card)

	deck.shuffle()

	var count_to_draw = to_reroll.size()
	for i in range(count_to_draw):
		if deck.is_empty():
			deck = Array(card_textures.keys())
			deck.shuffle()
		if deck.is_empty():
			break
		var card_name = deck.pop_front()
		var new_card = IngredientCardScene.instantiate()
		player_hand.add_child(new_card)
		new_card.setup(card_name, card_textures[card_name])
		hand_cards.append(new_card)
		if new_card.has_signal("card_picked_up"):
			new_card.connect("card_picked_up", Callable(self, "_on_card_picked_up"))
		if new_card.has_signal("reroll_toggled"):
			new_card.connect("reroll_toggled", Callable(self, "_on_card_reroll_toggled"))

	selected_for_reroll.clear()

	reroll_count += 1
	_update_reroll_label()

	result_label.text = "ë¦¬ë¡¤ ì‚¬ìš©: %d / %d" % [reroll_count, MAX_REROLL]
	if reroll_count >= MAX_REROLL and reroll_button:
		reroll_button.disabled = true

# --- ë¦¬ë¡¤ ë¼ë²¨ ê°±ì‹  ---
func _update_reroll_label():
	if reroll_label:
		var remain = MAX_REROLL - reroll_count
		if remain < 0:
			remain = 0
		reroll_label.text = "ë‚¨ì€ ë¦¬ë¡¤: %d" % remain

# --- ê²Œì„ íƒ€ì´ë¨¸ ë¼ë²¨ ê°±ì‹  ---
func _update_game_timer_label():
	if game_timer_label:
		game_timer_label.text = "ë‚¨ì€ ì‹œê°„: %.1fì´ˆ" % remaining_time

	# ğŸ”¥ ProgressBar ì—…ë°ì´íŠ¸ ì¶”ê°€!
	if game_timer_bar:
		game_timer_bar.value = remaining_time
# --- ê²Œì„ ì¢…ë£Œ ì²˜ë¦¬ ---

func _on_game_over():
	if game_over: return # ì¤‘ë³µ í˜¸ì¶œ ë°©ì§€
	
	game_over = true
	result_label.text = "ê²Œì„ ì˜¤ë²„!"
	
	reroll_button.disabled = true
	combine_button.disabled = true
	draw_button.disabled = true

	# ì¹´ë“œ ë“œë˜ê·¸ ë¶ˆê°€ ì²˜ë¦¬
	for card in hand_cards:
		if is_instance_valid(card):
			card.mouse_filter = Control.MOUSE_FILTER_IGNORE
	for slot_name in cards_in_slots:
		var card = cards_in_slots[slot_name]
		if card and is_instance_valid(card):
			card.mouse_filter = Control.MOUSE_FILTER_IGNORE

# --- ë§Œì¡±ë„ ì‹œìŠ¤í…œ í•¨ìˆ˜ ---

# ë§Œì¡±ë„ ë¡œì§ ì¢…í•© ì²˜ë¦¬ (UI, ì ìˆ˜, ë³´ìƒ)
func process_satisfaction_logic(success: bool, elapsed_time: float):
	
	var satisfaction_change = _calculate_satisfaction_score(success, elapsed_time)
	
	total_satisfaction += satisfaction_change
	_update_satisfaction_label()

	
	# ğŸ”¹ì‹œê°„ ì¡°ì • ë¡œì§ ì¶”ê°€
	if success:
		remaining_time += 5.0  # ì„±ê³µ ì‹œ 5ì´ˆ ì¶”ê°€
		if remaining_time > game_time_limit:
			remaining_time = game_time_limit  # ìµœëŒ€ ì œí•œì€ ë„˜ì§€ ì•Šë„ë¡
	else:
		remaining_time -= 5.0  # ì‹¤íŒ¨ ì‹œ 5ì´ˆ ê°ì†Œ
		if remaining_time < 0:
			remaining_time = 0
			_on_game_over()
			
		# ë§Œì¡±ë„ 0 ì´í•˜ ì‹œ ê²Œì„ ì˜¤ë²„ ì²˜ë¦¬
	if total_satisfaction <= 0:
		total_satisfaction = 0
		_update_satisfaction_label()
		_on_game_over()
		return

	if success:
		result_label.text = "ì™„ì„±! (ë§Œì¡±ë„ %+d)" % satisfaction_change
		monster_label.text = "ë§›ìˆê² ë‹¤!"
		
		# ë¦¬ë¡¤ ë³´ìƒ ë¡œì§
		if reroll_count > 0:
			reroll_count -= 1
			_update_reroll_label()
			result_label.text += "\në¦¬ë¡¤ ê¸°íšŒ +1!"
			reroll_button.disabled = false
	else:
		result_label.text = "ì´ìƒí•œ ìš”ë¦¬ê°€ ë‚˜ì™”ë‹¤... (ë§Œì¡±ë„ %d)" % satisfaction_change
		
		# [íŒ€ì› í†µí•© ì§€ì ]
		# ì „ì²´ íƒ€ì´ë¨¸ ê°ì†Œ ë¡œì§ì„ ì—¬ê¸°ì— ì¶”ê°€í•  ìˆ˜ ìˆìŠµë‹ˆë‹¤.
		# ì˜ˆ: remaining_time -= 5.0 

# ë§Œì¡±ë„ ì ìˆ˜ ê³„ì‚° (ìˆœìˆ˜ í•¨ìˆ˜)
func _calculate_satisfaction_score(success: bool, elapsed_time: float) -> int:
	if not success:
		return SATISFACTION_SCORE_FAIL 

	if elapsed_time <= SATISFACTION_TIME_TIER_1:
		return SATISFACTION_SCORE_TIER_1
	elif elapsed_time <= SATISFACTION_TIME_TIER_2:
		return SATISFACTION_SCORE_TIER_2
	elif elapsed_time <= SATISFACTION_TIME_TIER_3:
		return SATISFACTION_SCORE_TIER_3
	else:
		return SATISFACTION_SCORE_LATE

# ë§Œì¡±ë„ ë¼ë²¨ ê°±ì‹ 
func _update_satisfaction_label():
	if satisfaction_label:
		satisfaction_label.text = "í˜„ì¬ ë§Œì¡±ë„: %d" % total_satisfaction
